--- a/fileupload/templates/fileupload/show_articles.html
+++ b/fileupload/templates/fileupload/show_articles.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Artigos Filtrados</title>
+    
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         h2 { margin-bottom: 20px; }
